tests/snapshots/snapshots__pipeline@alias_unknown.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/alias_unknown.pr
---
== tokens ==
VOpen Effect UIdent("Tick") VOpen Ident("tick") LParen KwUnit RParen Colon KwInt VClose VSemi Alias UIdent("App") Eq LBrace UIdent("Tick") Comma UIdent("Missing") RBrace VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Int(IntLit { value: 1, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Tick",
            params: [],
            ops: [
                EffOp {
                    name: "tick",
                    params: [
                        Unit,
                    ],
                    ret: Int,
                    grade: Many,
                    span: 14..18,
                },
            ],
            span: 0..30,
        },
    ],
    errors: [],
    aliases: [
        AliasDecl {
            name: "App",
            labels: [
                EffLabel {
                    name: "Tick",
                    args: [],
                },
                EffLabel {
                    name: "Missing",
                    args: [],
                },
            ],
            span: 32..59,
        },
    ],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 73..80,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 81..82,
                        },
                    ],
                ),
                span: 73..83,
            },
            wheres: [],
            span: 61..83,
        },
    ],
}

== types ==
[E6005] Type Error: unknown effect `Missing` in alias `App`
   ╭─[ <source>:4:1 ]
   │
 4 │ alias App = {Tick, Missing}
   │ ─────────────┬─────────────  
   │              ╰─────────────── unknown effect `Missing` in alias `App`
───╯
