tests/snapshots/snapshots__pipeline@classes_unresolved.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/classes_unresolved.pr
---
== tokens ==
VOpen Type UIdent("Color") Eq UIdent("Red") Bar UIdent("Green") Bar UIdent("Blue") VSemi Class UIdent("Eq2") LParen Ident("a") RParen VOpen Ident("eq2") Colon LParen Ident("a") Comma Ident("a") RParen Arrow KwBool VClose VSemi Instance Ident("eqInt2") Colon UIdent("Eq2") LParen KwInt RParen VOpen Fn Ident("eq2") LParen Ident("x") Comma Ident("y") RParen Eq Ident("x") EqEq Ident("y") VClose VSemi Fn Ident("main") LParen RParen Eq Ident("eq2") LParen UIdent("Red") Comma UIdent("Blue") RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Color",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Red",
                    args: [],
                    fields: None,
                    span: 13..16,
                },
                Ctor {
                    name: "Green",
                    args: [],
                    fields: None,
                    span: 19..24,
                },
                Ctor {
                    name: "Blue",
                    args: [],
                    fields: None,
                    span: 27..31,
                },
            ],
            deriving: [],
            newtype: false,
            span: 0..31,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Eq2",
            param: "a",
            supers: [],
            methods: [
                ClassMethod {
                    name: "eq2",
                    ty: Fun(
                        [
                            Var(
                                "a",
                            ),
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Bool,
                    ),
                    span: 48..51,
                },
            ],
            span: 33..68,
        },
    ],
    instances: [
        InstanceDecl {
            name: "eqInt2",
            class: "Eq2",
            head: Int,
            context: [],
            methods: [
                Decl {
                    name: "eq2",
                    params: [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                        Param {
                            name: "y",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    ret: None,
                    eff: None,
                    constraints: [],
                    body: Spanned {
                        node: Bin(
                            Eq,
                            Spanned {
                                node: Var(
                                    "x",
                                ),
                                span: 114..115,
                            },
                            Spanned {
                                node: Var(
                                    "y",
                                ),
                                span: 119..120,
                            },
                        ),
                        span: 114..120,
                    },
                    wheres: [],
                    span: 99..120,
                },
            ],
            module: "",
            span: 70..120,
        },
    ],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "eq2",
                        ),
                        span: 134..137,
                    },
                    [
                        Spanned {
                            node: Var(
                                "Red",
                            ),
                            span: 138..141,
                        },
                        Spanned {
                            node: Var(
                                "Blue",
                            ),
                            span: 143..147,
                        },
                    ],
                ),
                span: 134..148,
            },
            wheres: [],
            span: 122..148,
        },
    ],
}

== types ==
[E3012] Type Error: in `main`: no instance for Eq2(Color)
   ╭─[ <source>:9:13 ]
   │
 9 │ fn main() = eq2(Red, Blue)
   │             ─┬─  
   │              ╰─── in `main`: no instance for Eq2(Color)
───╯
