tests/snapshots/snapshots__pipeline@coeffect_reserved.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/coeffect_reserved.pr
---
== tokens ==
VOpen Fn Ident("apply") LParen Ident("f") Colon LParen LParen KwInt RParen Arrow KwInt RParen At Ident("unique") Comma Ident("x") Colon KwInt RParen Colon KwInt Eq Ident("f") LParen Ident("x") RParen VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Ident("apply") LParen Lambda LParen Ident("y") RParen Arrow Ident("y") Plus Int(IntLit { value: 1, suffix: None }) Comma Int(IntLit { value: 41, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "apply",
            params: [
                Param {
                    name: "f",
                    ty: Some(
                        Coeffect(
                            Fun(
                                [
                                    Int,
                                ],
                                Empty,
                                Int,
                            ),
                            CoeffectRow {
                                facts: [
                                    Unique,
                                ],
                            },
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "x",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "f",
                        ),
                        span: 325..326,
                    },
                    [
                        Spanned {
                            node: Var(
                                "x",
                            ),
                            span: 327..328,
                        },
                    ],
                ),
                span: 325..329,
            },
            wheres: [],
            span: 270..329,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "apply",
                        ),
                        span: 349..354,
                    },
                    [
                        Spanned {
                            node: Lam(
                                [
                                    Param {
                                        name: "y",
                                        ty: None,
                                        borrow: false,
                                        default: None,
                                    },
                                ],
                                Spanned {
                                    node: Bin(
                                        Add,
                                        Spanned {
                                            node: Var(
                                                "y",
                                            ),
                                            span: 363..364,
                                        },
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 1,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 367..368,
                                        },
                                    ),
                                    span: 363..368,
                                },
                            ),
                            span: 355..368,
                        },
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 41,
                                    suffix: None,
                                },
                            ),
                            span: 370..372,
                        },
                    ],
                ),
                span: 349..373,
            },
            wheres: [],
            span: 331..373,
        },
    ],
}

== types ==
[E6052] Type Error: usage fact `unique` is reserved but not implemented
   ╭─[ <source>:5:1 ]
   │
 5 │ fn apply(f : ((Int) -> Int) @ unique, x : Int) : Int = f(x)
   │ ─────────────────────────────┬─────────────────────────────  
   │                              ╰─────────────────────────────── usage fact `unique` is reserved but not implemented
───╯
