tests/snapshots/snapshots__pipeline@coeffect_unknown.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/coeffect_unknown.pr
---
== tokens ==
VOpen Fn Ident("f") LParen Ident("x") Colon KwInt At Ident("fast") RParen Colon KwInt Eq Ident("x") VClose

== parse ==
[E7100] Parse Error: unknown usage fact `fast`
   ╭─[ <source>:3:10 ]
   │
 3 │ fn f(x : Int @ fast) : Int = x
   │          ─────┬────  
   │               ╰────── here
───╯
